--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
 body {
   background: darkgrey;
 }
+
+html {
+  font-family: helvetica;
+}
+
+#title {
+  text-align: center;
+}
+
+#black-card{
+  height: 245px;
+}
+
+#black-card-text{
+  font-size: 1.5em;
+  line-height: normal;
+}
+
+.card-panel.white{
+  height: 245px;
+  font-size: 1.5em;
+  line-height: normal;
+}
