--- a/style.css
+++ b/style.css
@@ -29,3 +29,13 @@ html {
   width: 68%;
   margin: 0 auto;
 }
+
+#score-box{
+  float: right;
+  font-size: 1.2em;
+  line-height: .7em;
+  margin-right: 7%;
+  border-color: 3px;
+  border-width: medium;
+  border-color: red;
+}
